--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -33,24 +33,25 @@
       },
       "extensions": [
         "McCarter.start-git-bash",
-        "alexcvzz.vscode-sqlite",
+        "yy0931.vscode-sqlite3-editor",
         "medo64.render-crlf",
         "ecmel.vscode-html-css",
-        "ms-vscode.js-debug",
-        "dbaeumer.vscode-eslint",
-        "miramac.vscode-exec-node",
-        "yy0931.vscode-sqlite3-editor",
+        "ms-python.python",
+        "esbenp.prettier-vscode",
         "oderwat.indent-rainbow",
         "ritwickdey.LiveServer",
         "tomoki1207.pdf",
         "ms-vscode-remote.remote-containers",
         "ms-vscode-remote.remote-wsl",
         "GitHub.codespaces",
+        "ms-python.debugpy",
+        "ms-python.vscode-pylance",
         "ms-vscode-remote.remote-wsl",
         "ms-azuretools.vscode-docker",
-        "rangav.vscode-thunder-client"
+        "saeris.markdown-github-alerts",
+        "bierner.markdown-preview-github-styles"
       ]
     }
   },
-  "forwardPorts": [5000, 3000]
+  "forwardPorts": [5000]
 }
